Добавлены функции для копирования, перемещения, вывода информации для узлов дерева

--- a/lab3/22/DataStructures/CMakeLists.txt
+++ b/lab3/22/DataStructures/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(data-structures-library Stack.h)
+add_library(data-structures-library Stack.h Queue.h)
 set_target_properties(data-structures-library PROPERTIES LINKER_LANGUAGE CXX)
