Added saving and loading file system tree from file

--- a/lab3/22/FileSystem/CMakeLists.txt
+++ b/lab3/22/FileSystem/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(file-system-binary-tree-library FileSystemTree.h FileSystemTree.cpp)
+add_library(file-system-binary-tree-library FileSystemTree.h FileSystemParser.h)
 set_target_properties(file-system-binary-tree-library PROPERTIES LINKER_LANGUAGE CXX)
