--- a/lab4/18/DataStructures/CMakeLists.txt
+++ b/lab4/18/DataStructures/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(data-structures-library graph.c graph.h)
-set_target_properties(data-structures-library PROPERTIES LINKER_LANGUAGE C)
+add_library(data-structures-library
+        Graph/Graph.cpp Graph/Graph.h
+        GraphParser/GraphParser.cpp GraphParser/GraphParser.h
+        Queue.h)
+set_target_properties(data-structures-library PROPERTIES LINKER_LANGUAGE CXX)
