Небольшие изменения для поддержки C++ 14

--- a/lab4/18/DijkstraAlgorithm.vcxproj
+++ b/lab4/18/DijkstraAlgorithm.vcxproj
@@ -99,6 +99,11 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <LanguageStandard>Default</LanguageStandard>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="algorithmimplementation\DijkstraAlgorithm.cpp" />
     <ClCompile Include="datastructures\graphparser\GraphParser.cpp" />
